Remove timeline arrows on mobile, content fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1192,17 +1192,6 @@ h3 {
   .timeline .timeline-item:nth-child(even) .timeline-content {
     float: none;
   }
-  .timeline .timeline-item:nth-child(odd) .timeline-content::after {
-    content: "";
-    position: absolute;
-    border-style: solid;
-    width: 0;
-    height: 0;
-    top: 30px;
-    left: -15px;
-    border-width: 10px 15px 10px 0;
-    border-color: transparent #f5f5f5 transparent transparent;
-  }
 }
 .attending_area {
   padding-top: 95px;
