--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -122,23 +122,7 @@ $text: #ffffff;
                 .timeline-content {
                     float: none;
                 }
-            }
-            
-            &:nth-child(odd) {
-                .timeline-content {
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        border-style: solid;
-                        width: 0;
-                        height: 0;
-                        top: 30px;
-                        left: -15px;
-                        border-width: 10px 15px 10px 0;
-                        border-color: transparent #f5f5f5 transparent transparent;
-                    }
-                }
-            }
+            }            
         }
     }
 }
